# rust-spdk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
scripts/: prereq.sh  setup-examples.sh  verify-examples.sh
scripts/prereq/: common.sh  debian.sh
spdk/: Cargo.toml  README.md
spdk-macros/: Cargo.toml
spdk-macros/src/: cli.rs  define_errno.rs  lib.rs  main_attr.rs  module.rs
spdk-sys/: Cargo.toml  README.md  build.rs  ext.c  wrapper.h
spdk-sys/src/: lib.rs  macros.rs
spdk/examples/: bdev_hello_world.rs  cli.rs  interval.rs  module_echo.rs  module_null.rs  module_passthru.rs  net_hello_world.rs  net_resolve.rs  nvmf.rs  reactor.rs  runtime.rs  sleep.rs  thread.rs
spdk/src/: block.rs  cli.rs  dma.rs  errors.rs  lib.rs  macros.rs  pooled.rs  runtime.rs  task.rs  thread.rs  time.rs
spdk/src/bdev/: any.rs  bdev.rs  malloc.rs  mod.rs  module.rs  owned.rs
spdk/src/block/: any.rs  descriptor.rs  device.rs  io.rs  io_channel.rs  mod.rs  owned.rs
spdk/src/json/: mod.rs
spdk/src/json/serde/: de.rs  error.rs  macros.rs  mod.rs  ser.rs  test.rs
spdk/src/net/: addr.rs  libanl.rs  listener.rs  mod.rs  sock_group.rs  stream.rs
spdk/src/nvme/: mod.rs  transport_id.rs
spdk/src/nvmf/: host.rs  mod.rs  namespace.rs  subsystem.rs  target.rs  transport.rs
spdk/src/runtime/: cpu_core.rs  cpu_set.rs  mod.rs  reactor.rs  runtime.rs
spdk/src/task/: arc_task.rs  join_handle.rs  local_task.rs  mod.rs  poller.rs  promise.rs  rc_task.rs  remote_task.rs  task.rs  yield_now.rs
