[package]
name = "spdk-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "visit"] }
ternary-rs = "1.0.0"

[features]
default = []
bdev-module = []
