[package]
name = "spdk-sys"
version = "0.1.0"
edition = "2021"
links = "spdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
autotools = "0.2.7"
bindgen = { version = "0.69.4", features = ["experimental"] }
cc = "1.1.6"
doxygen-rs = "0.4.2"
fs_extra = "1.3.0"
itertools = "0.13.0"
pkg-config = "0.3.30"
regex = "1.10.5"

[features]
default = []
bdev = []
bdev-malloc = ["bdev"]
bdev-module = ["bdev"]
nvmf = ["bdev"]
