[package]
name = "spdk-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
links = "spdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
autotools = "0.2.7"
bindgen = { version = "0.72.1", features = ["experimental"] }
cc = "1.2.65"
doxygen-rs = "0.4.2"
fs_extra = "1.3.0"
itertools = "0.15.0"
pkg-config = "0.3.33"
regex = "1.13.0"

[features]
default = []
bdev = []
bdev-malloc = ["bdev"]
bdev-module = ["bdev"]
json = []
net = []
nvmf = ["bdev"]

[dependencies]
bitfields = "3.0.0"
