[package]
name = "spdk"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
aquamarine = "0.5.0"
async-trait = "0.1.74"
byte-strings = "0.3.1"
errno = "0.3.1"
futures = "0.3.28"
libc = "0.2.146"
spdk-macros = { version = "0.1.0", path = "../spdk-macros" }
spdk-sys = { version = "0.1.0", path = "../spdk-sys" }
static_init = "1.0.3"
ternary-rs = "1.0.0"

[dev-dependencies]
byte-strings= "0.3.1"

[features]
default = []
bdev-malloc = ["spdk-sys/bdev-malloc"]
bdev-module = ["spdk-macros/bdev-module", "spdk-sys/bdev-module"]
nvmf = ["spdk-sys/nvmf"]

[[example]]
name = "bdev_hello_world"
required-features = ["bdev-malloc"]

[[example]]
name = "nvmf"
required-features = ["bdev-malloc", "nvmf"]

[[example]]
name = "module_echo"
required-features = ["bdev-module"]

[[example]]
name = "module_null"
required-features = ["bdev-module"]

[[example]]
name = "module_passthru"
required-features = ["bdev-malloc", "bdev-module"]
