[package]
name = "spdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
aquamarine = "0.5.0"
async-trait = "0.1.74"
errno = "0.3.9"
futures = "0.3.30"
libc = "0.2.155"
serde = { version = "1.0.210", features = ["derive"] }
spdk-macros = { version = "0.1.0", path = "../spdk-macros" }
spdk-sys = { version = "0.1.0", path = "../spdk-sys" }
static_init = "1.0.3"
ternary-rs = "1.0.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
byte-strings= "0.3.1"
laboratory = "2.0.0"

[features]
default = []
bdev = ["spdk-sys/bdev"]
bdev-malloc = ["bdev", "spdk-sys/bdev-malloc"]
bdev-module = ["bdev", "spdk-macros/bdev-module", "spdk-sys/bdev-module"]
json = ["spdk-sys/json"]
nvmf = ["bdev","spdk-sys/nvmf"]

[[example]]
name = "bdev_hello_world"
required-features = ["bdev-malloc"]

[[example]]
name = "nvmf"
required-features = ["bdev-malloc", "nvmf"]

[[example]]
name = "module_echo"
required-features = ["bdev-module"]

[[example]]
name = "module_null"
required-features = ["bdev-module"]

[[example]]
name = "module_passthru"
required-features = ["bdev-malloc", "bdev-module"]
