[package]
name = "spdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
aquamarine = "0.6.0"
async-trait = "0.1.88"
errno = "0.3.12"
futures = "0.3.31"
libc = "0.2.172"
serde = { version = "1.0.219", features = ["derive"] }
spdk-macros = { version = "0.1.0", path = "../spdk-macros" }
spdk-sys = { version = "0.1.0", path = "../spdk-sys" }
static_init = "1.0.4"
ternary-rs = "1.0.0"

[dev-dependencies]
async-std = { version = "1.13.1", features = ["unstable"] }
laboratory = "2.0.0"

[features]
default = []
bdev = ["spdk-sys/bdev"]
bdev-malloc = ["bdev", "spdk-sys/bdev-malloc"]
bdev-module = ["bdev", "spdk-macros/bdev-module", "spdk-sys/bdev-module"]
json = ["spdk-sys/json"]
nvmf = ["bdev","spdk-sys/nvmf"]

[[example]]
name = "bdev_hello_world"
required-features = ["bdev-malloc"]

[[example]]
name = "nvmf"
required-features = ["bdev-malloc", "nvmf"]

[[example]]
name = "module_echo"
required-features = ["bdev-module"]

[[example]]
name = "module_null"
required-features = ["bdev-module"]

[[example]]
name = "module_passthru"
required-features = ["bdev-malloc", "bdev-module"]
